--- a/MyTools/MyTools.rc
+++ b/MyTools/MyTools.rc
@@ -120,6 +120,9 @@ BEGIN
     PUSHBUTTON      "Start",IDC_BTN_START4,110,110,50,14
     LTEXT           "Watch color change:",IDC_STATIC,32,113,67,8
     EDITTEXT        IDC_EDIT_WND4,187,109,100,14,ES_AUTOHSCROLL
+    PUSHBUTTON      "Start",IDC_BTN_START5,106,134,50,14
+    LTEXT           "Watch size change:",IDC_STATIC,28,137,64,8
+    EDITTEXT        IDC_EDIT_WND5,183,133,100,14,ES_AUTOHSCROLL
 END
 
 
